# realtime_api_gui

./: .gitignore  CLAUDE.md  README.md  TEST_SUMMARY.md  app.py  pyproject.toml  test_executable.py  test_voice_generation.py
.github/: release-template.md
.github/workflows/: build-release.yml
config/: prompts.json
models/: __init__.py  voice_generator.py
releases/Realtime-API-GUI.app/Contents/: Info.plist
tests/: conftest.py
tests/integration/: test_voice_generation_workflow.py
tests/unit/: __init__.py
tests/unit/models/: test_voice_generator.py
tests/unit/utils/audio/: test_mix_audio.py
tests/unit/utils/logger/: test_logger_utils.py
tests/unit/utils/ui/: test_main_window.py  test_pyqt_window.py
utils/: __init__.py
utils/audio/: __init__.py  mix_audio.py  test_mix_audio.py
utils/logger/: __init__.py  logger_utils.py
utils/ui/: __init__.py  main_window.py  performer_settings_dialog.py  performer_settings_tkinter.py  pyqt_window.py
